# my_pixi_ros_ws

./: .gitignore  README.md  pixi.toml
src/my_cmake_ros_library_pkg/: CMakeLists.txt  package.xml
src/my_cmake_ros_library_pkg/include/my_cmake_ros_library_pkg/: my_cmake_library.hpp  visibility_control.h
src/my_cmake_ros_library_pkg/src/: my_cmake_library.cpp
src/my_cmake_ros_node_pkg/: CMakeLists.txt  package.xml
src/my_cmake_ros_node_pkg/src/: my_cmake_node.cpp
